--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "./node_modules/.bin/cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^9.0.0"
+    "@types/uuid": "^9.0.0",
+    "cypress": "^12.4.1",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
